# SmartAttendanceSystem

./: .gitignore  BUILD_APK.md  README.md  app.py  attendance.csv  main.py  models.py  pyproject.toml  recognize.py  register.py  schemas.py  test_geofence.py  utils.py
.github/workflows/: build_apk.yml
instance/: attendance.db
static/: manifest.json  sw.js
static/css/: docs.css  style.css
static/js/: custom_select.js  recognize.js  register.js  reports.js
templates/: base.html  index.html  recognize.html  register.html  reports.html
templates/docs/: index.html
