[project]
name = "smartattendancesystem"
version = "0.1.0"
description = "Smart Attendance System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "pydantic>=2.9.0",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
